testing buttons with js

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>BladeELO - Easy Leaderboard Tool</title>
+    <script src="/resources/test.js"></script>
   </head>
-  <body> 
+  <body>
     <p>Just a test<br>
-      :)
-    </p>
+      :) </p>
+    <div> <button onclick="say_hewwo"> Say Hewwo </button> </div>
   </body>
 </html>
