--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <p>Just a test<br>
       :) </p>
-    <div> <button onclick="say_hewwo"> Say Hewwo </button> </div>
+    <div> <button onclick="say_hewwo()"> Say Hewwo </button> </div>
   </body>
 </html>
