--- a/BladeELO.html
+++ b/BladeELO.html
@@ -15,14 +15,14 @@
           <th class="ELO">ELO</th>
         </tr>
         <tr id="player1">
-          <th class="RipperID">Pyra ReIncarna</th>
-          <th class="Identity">Lilly G.</th>
-          <th class="ELO">1190</th>
+          <td class="RipperID">Pyra ReIncarna</td>
+          <td class="Identity">Lilly G.</td>
+          <td class="ELO">1190</td>
         </tr>
         <tr id="player2">
-          <th class="RipperID">Boppin Blitz</th>
-          <th class="Identity">Colin Y.</th>
-          <th class="ELO">1126</th>
+          <td class="RipperID">Boppin Blitz</td>
+          <td class="Identity">Colin Y.</td>
+          <td class="ELO">1126</td>
         </tr>
       </tbody>
     </table>
