Added name for JS purposes

--- a/BladeELO.html
+++ b/BladeELO.html
@@ -7,7 +7,7 @@
   <body>
     <h1 id="Title">Automatic ELO Ranking</h1>
     <h2> Beyblade ELO Rankings: </h2>
-    <table id="rankings">
+    <table id="rankings" name="rankings_table">
       <tbody>
         <tr id="labels">
           <th class="RipperID">Ripper ID</th>
@@ -15,17 +15,16 @@
           <th class="ELO">ELO</th>
         </tr>
         <tr id="player1">
-          <td class="RipperID">Pyra ReIncarna</td>
-          <td class="Identity">Lilly G.</td>
-          <td class="ELO">1190</td>
+          <th class="RipperID">Pyra ReIncarna</th>
+          <th class="Identity">Lilly G.</th>
+          <th class="ELO">1190</th>
         </tr>
         <tr id="player2">
-          <td class="RipperID">Boppin Blitz</td>
-          <td class="Identity">Colin Y.</td>
-          <td class="ELO">1126</td>
+          <th class="RipperID">Boppin Blitz</th>
+          <th class="Identity">Colin Y.</th>
+          <th class="ELO">1126</th>
         </tr>
       </tbody>
     </table>
-    
   </body>
 </html>
