--- a/BladeELO.html
+++ b/BladeELO.html
@@ -9,7 +9,7 @@
     <h1 id="Title">Automatic ELO Ranking</h1>
     <h2> Beyblade ELO Rankings: </h2>
     <table id="rankings">
-      <tbody name="rankings_table">
+      <tbody>
         <tr id="labels">
           <th class="RipperID">Ripper ID</th>
           <th class="Identity">Identity</th>
