Reformatted table code - now it makes changes to the array, then renders

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <body>
     <p>Just a test<br>
       :) </p>
-    <div> <form name="new_player_info">
-      	Enter player information:
-      <br>
-      Name: <input type="text" name="player_name">
-      <br>
-      Ripper ID: <input type="text" name="player_ripper_id">
-      <br>
-      <input type="button" value="Add" onclick="add_player()">
-      </form> </div>
-    
+    <div>
+      <form name="new_player_info"> Enter player information: <br>
+        Name: <input name="player_name" type="text"> <br>
+        Ripper ID: <input name="player_ripper_id" type="text"> <br>
+        <input value="Add" onclick="add_player()" type="button"> </form>
+    </div>
   </body>
 </html>
