--- a/BladeELO.html
+++ b/BladeELO.html
@@ -4,10 +4,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>BladeELO</title>
     <script src="resources/scripts/leaderboard.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1 id="Title">Automatic ELO Ranking</h1>
-    <h2> Beyblade ELO Rankings: </h2>
+    <h1 class="Title">Automatic ELO Ranking</h1>
+    <h2 class="Title"> Beyblade ELO Rankings: </h2>
     <table id="rankings">
       <tbody name="rankings_table">
         <tr id="labels">
@@ -33,6 +34,5 @@
         Ripper ID: <input name="player_ripper_id" type="text"> <br>
         <input value="Add" onclick="add_player()" type="button"> </form>
     </div>
-    
   </body>
 </html>
