--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>BladeELO</title>
     <script src="resources/scripts/leaderboard.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous">
   </head>
   <body>
     <h1 class="Title">Automatic ELO Ranking</h1>
@@ -22,14 +25,21 @@
       <form name="new_player_info"> Enter player information: <br>
         Name: <input name="player_name" type="text"> <br>
         Ripper ID: <input name="player_ripper_id" type="text"> <br>
-        <input value="Add" onclick="add_player()" type="button"> <input value="Clear"
-
+        <input value="Add" onclick="add_player()" type="button"> <input value="Clear"
 onclick="clear_players()" type="button"> <br>
         <input value="Copy JSON to clipboard" onclick="copy_json()" type="button">
         <br>
-        Import JSON: <input name="json_input" type="text"> <input
-
-value="Import" onclick="import_json()" type="button"></form>
+        Import JSON: <input name="json_input" type="text"> <input value="Import"
+onclick="import_json()" type="button"></form>
     </div>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </body>
 </html>
