Credit for bracket and bracketStyles
Added credit for the inspiration for the code.

--- a/bracket.html
+++ b/bracket.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <head>
+  <!--Code based on "FCS Tournament Bracket", posted by user Meredith on codepen.io-->
+  <!--Link: https://codepen.io/meredithz/pen/VYadPy-->
     <link rel="stylesheet" href="bracketStyles.css">
 </head>
 <body>
