added winner/loser stuff on main leaderboard page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@ onclick="clear_players()" type="button"> <br>
 
 onclick="import_json_onclick()" type="button"></form>
     </div>
+    <div>
+      <form name="matchup_form"> Winner ID: <input name="matchup_winner" type="text">
+        <br>
+        Loser ID:<input name="matchup_loser" type="text"> <br>
+        <input value="Add Matchup Results" onclick="add_matchup_results" type="button">
+      </form>
+    </div>
     <table id="rankings">
       <tbody>
         <tr id="labels">
@@ -33,6 +40,5 @@ onclick="import_json_onclick()" type="button"></form>
     <script src="resources/scripts/player.js"></script>
     <script src="resources/scripts/leaderboard.js"></script>
     <script src="resources/scripts/utils.js"></script>
-    
   </body>
 </html>
