Ok matchups work kind of

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ onclick="import_json_onclick()" type="button"></form>
       <form name="matchup_form"> Winner ID: <input name="matchup_winner" type="text">
         <br>
         Loser ID:<input name="matchup_loser" type="text"> <br>
-        <input value="Add Matchup Results" onclick="add_matchup_results" type="button">
+        <input value="Add Matchup Results" onclick="add_matchup_results()" type="button">
       </form>
     </div>
     <table id="rankings">
